# rustplayer

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  rustplayer.code-workspace
.github/workflows/: ci.yml
docs/: API_KEYS.md  ARCHITECTURE.md  BUILDING.md  SHORTCUTS.md
installer/windows/: rustplayer.iss
scripts/: build-release.ps1  build-release.sh  setup-mpv-windows.ps1
src/: ab_repeat.rs  app.rs  bookmarks.rs  chapters.rs  config.rs  converter.rs  donation.rs  equalizer.rs  history.rs  i18n.rs  image_controls.rs  karaoke.rs  lastfm.rs  lib.rs  main.rs  media_info.rs  notes.rs  opensubtitles.rs  player.rs  playlist.rs  remote.rs  renderer.rs  sleep_timer.rs  streaming.rs  theme_manager.rs  thumbnail.rs  trim.rs  up_next.rs  updater.rs
src/app/: actions.rs  events.rs  panels.rs
src/ui/: audio_tracks.rs  bookmarks_panel.rs  chapters_panel.rs  codec_diagnostics_panel.rs  context_menu.rs  controls.rs  converter_panel.rs  equalizer_panel.rs  history_panel.rs  image_controls_panel.rs  karaoke_panel.rs  library_panel.rs  media_info_panel.rs  menu.rs  mod.rs  notes_panel.rs  opensubtitles_panel.rs  performance_panel.rs  pip.rs  playlist_panel.rs  settings_panel.rs  sleep_timer_panel.rs  streaming_panel.rs  subtitles.rs  sync_panel.rs  theme_panel.rs  trim_panel.rs  up_next_panel.rs
tests/: integration_flow.rs
website/: README.md  ads.js  app.js  index.html  privacy.html  styles.css  terms.html
