[package]
name = "rplayer"
version = "0.5.0-alpha"
edition = "2021"
build = "build.rs"
description = "Reproductor de video y audio libre"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "rplayer"
path = "src/main.rs"

[dependencies]
# UI
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
egui_glow = "0.27"
glow = "0.13"

# Media backend
libmpv2 = { version = "5", features = ["render"] }
libmpv2-sys = "4.0.1"

# GL proc-address
libloading = "0.8"

# Native file dialog
rfd = "0.14"

# Open URLs in browser
open = "5"

# Config and persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Communication between threads
crossbeam-channel = "0.5"

# Remote HTTP and Last.fm
tiny_http = "0.12"
ureq = { version = "2", features = [] }

# Hashing (Last.fm signature, file identity)
md5 = "0.7"

# Find executables in PATH (ffmpeg, yt-dlp)
which = "6"

# time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Obfuscation of sensitive strings in the binary (API keys, internal URLs)
obfstr = "0.4"

# Image for thumbnails
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# RSS/XML for podcasts
quick-xml = "0.38"

[profile.release]
opt-level = 3
lto = true            # Link-time optimization: more compact and less analyzeable binary
codegen-units = 1     # A single chunk: less visible structural information
strip = true          # Remove function names, source code paths, debug symbols
panic = "abort"       # Remove panic messages that include .rs file names
overflow-checks = false

[profile.dev]
opt-level = 1

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "wingdi", "winuser"] }
